--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ itypes==1.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 mypy-extensions==1.0.0
+mysql-connector-python==9.1.0
 package_name==0.1
 packaging==24.2
 pathspec==0.12.1
@@ -27,7 +28,9 @@ pytest-django==4.9.0
 python-barcode==0.15.1
 python-decouple==3.8
 requests==2.32.3
+setuptools==75.6.0
 sqlparse==0.5.3
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.3.0
+wheel==0.45.1
