--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==3.1.5
 MarkupSafe==3.0.2
 mypy-extensions==1.0.0
 mysql-connector-python==9.1.0
+mysqlclient==2.2.6
 package_name==0.1
 packaging==24.2
 pathspec==0.12.1
