--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ coreschema==0.0.4
 coverage==7.6.10
 Django==5.1.4
 django-debug-toolbar==4.4.6
+django-extensions==3.2.3
 djangorestframework==3.15.2
 idna==3.10
 iniconfig==2.0.0
@@ -18,6 +19,8 @@ MarkupSafe==3.0.2
 mypy-extensions==1.0.0
 mysql-connector-python==9.1.0
 mysqlclient==2.2.6
+numpy==2.2.1
+opencv-python==4.10.0.84
 package_name==0.1
 packaging==24.2
 pathspec==0.12.1
@@ -28,6 +31,7 @@ pytest==8.3.4
 pytest-django==4.9.0
 python-barcode==0.15.1
 python-decouple==3.8
+pyzbar==0.1.9
 requests==2.32.3
 setuptools==75.6.0
 sqlparse==0.5.3
