--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,72 @@
+appnope==0.1.4
 asgiref==3.8.1
+asttokens==3.0.0
+barcode==1.0.4
 black==24.10.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+comm==0.2.2
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==7.6.10
+debugpy==1.8.11
+decorator==5.1.1
 Django==5.1.4
 django-debug-toolbar==4.4.6
 django-extensions==3.2.3
 djangorestframework==3.15.2
+executing==2.1.0
 idna==3.10
 iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.31.0
 itypes==1.2.0
+jedi==0.19.2
 Jinja2==3.1.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+Levenshtein==0.26.1
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
 mypy-extensions==1.0.0
 mysql-connector-python==9.1.0
 mysqlclient==2.2.6
+nest-asyncio==1.6.0
 numpy==2.2.1
 opencv-python==4.10.0.84
 package_name==0.1
 packaging==24.2
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
 pluggy==1.5.0
+prompt_toolkit==3.0.48
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
 pytest==8.3.4
 pytest-django==4.9.0
 python-barcode==0.15.1
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-Levenshtein==0.26.1
 pyzbar==0.1.9
+pyzmq==26.2.0
+RapidFuzz==3.11.0
 requests==2.32.3
 setuptools==75.6.0
+six==1.17.0
 sqlparse==0.5.3
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.3.0
+wcwidth==0.2.13
 wheel==0.45.1
